# BeecrowdChalengs

./: CMakeLists.txt
BeeCrowdExercises/Beginner/: BEE1005.cpp  BEE1006.cpp  BEE1007.cpp  BEE1008.cpp  BEE1009.cpp  BEE1010.cpp  Bee1011.cpp  main.cpp
Personal Coments/: BEE1005 and BEE1006.md
