cmake_minimum_required(VERSION 3.27)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 BeeCrowdExercises/Beginner/main.cpp
        BeeCrowdExercises/Beginner/BEE1005.cpp
        BeeCrowdExercises/Beginner/BEE1006.cpp
        BeeCrowdExercises/Beginner/BEE1007.cpp
        BeeCrowdExercises/Beginner/BEE1008.cpp
        BeeCrowdExercises/Beginner/BEE1009.cpp
        BeeCrowdExercises/Beginner/BEE1009.cpp
        BeeCrowdExercises/Beginner/BEE1010.cpp)
